# mundane

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  install.sh
.claude/skills/mundane/: SKILL.md
.github/workflows/: ci.yml  release.yml
bash/: mundane
bash/test/: run.sh
conformance/: run.py
conformance/drivers/: driver.js  driver.py
conformance/scenarios/: types.json  workflow.json
docs/: README.md  app.js  index.html  styles.css  tailwind.css
examples/: README.md  smoke.sh
examples/ai-pipeline-python/: README.md  pipeline.py
examples/docker-volume/: Dockerfile  README.md  compose.yaml  workflow.sh
examples/etl-typescript/: README.md  package.json  pipeline.ts  tsconfig.json
examples/onboarding-go/: README.md  go.mod  main.go
go/: README.md  go.mod
go/cmd/conformance/: main.go
go/cmd/mundane/: bootstrap.go  flock.go  init.go  init.tmpl  inspect.go  main.go  nap.go  step.go
go/mundane/: ctx.go  duration.go  duration_test.go  encoding.go  encoding_test.go  errors.go  inspect.go  json.go  lock.go  run.go  run_test.go  schema.go
interop-tests/: run.sh
python/: README.md  pyproject.toml  ruff.toml
python/mundane/: __init__.py  __main__.py  _duration.py  _lock.py  _schema.py  core.py  inspect.py
python/tests/: test_basic.py
typescript/: README.md  biome.json  package.json  tsconfig.json
typescript/src/: cli.ts  db.ts  duration.ts  errors.ts  index.ts  inspect.ts  lock.ts  names.ts  schema.ts
typescript/test/: basic.test.ts
