[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mundane"
version = "1.0.0"
description = "Tiny durable-execution: one workflow run is one SQLite file."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "../LICENSE" }
authors = [{ name = "Paul Bellamy" }]
dependencies = []

[project.scripts]
mundane = "mundane.__main__:main"

[tool.setuptools.packages.find]
include = ["mundane*"]
